# task

12armor/: CMakeLists.txt  armor.cpp  armor2.cpp
1opencv/: CMakeLists.txt  main.cpp
2ros/: CMakeLists.txt  main.cpp
3rviz/devel/: .catkin
3rviz/devel/lib/pkgconfig/: rviz_pkg.pc
3rviz/devel/lib/rviz_pkg/: rviz
3rviz/devel/share/rviz_pkg/cmake/: rviz_pkgConfig.cmake
3rviz/src/rviz_pkg/: CMakeLists.txt
3rviz/src/rviz_pkg/src/: rviz.cpp
4ssh/: CMakeLists.txt  hlt.sh  main.cpp  ssh.sh
6mnist/: train-4.index  train.index
6mnist/mnist/: mnist.py
7Serial/: CMakeLists.txt  main.cpp
